// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlurSavingTextField renders using the initial value 1`] = `
<DocumentFragment>
  TextField: {"value":"foo"}
</DocumentFragment>
`;

exports[`BlurSavingTextField updates the temporary internal value appropriately 1`] = `
<DocumentFragment>
  TextField: {"value":"foo"}
</DocumentFragment>
`;

exports[`BlurSavingTextField updates the temporary internal value appropriately 2`] = `
<DocumentFragment>
  TextField: {"value":"bar"}
</DocumentFragment>
`;
